@@ -19,6 +19,7 @@
 - Fixed print dialog to show correct page amount instead of 9999 (WARNING: requires patching wxWidgets, see docs)
 - It is now possible to see song length (minutes:seconds) in song info window
 - Improved mouse events propagation, so areas are less viral about mouse needing to remain within defined boundaries
+- Added track property dialog, where default note volume can be set in addition to background
 
 1.2b3
 - Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
